[gd_scene load_steps=2 format=3 uid="uid://i7niu5h5meik"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_r11yr"]

[node name="hud" type="CanvasLayer"]
script = ExtResource("1_r11yr")

[node name="constant_force_debug" type="Label" parent="."]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 64
text = "0
"

[node name="health_display" type="Label" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 44.0
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "Lives:"

[node name="ShooterTimer" type="Label" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 23.0
text = "shooter timer"

[node name="ChaserTimer" type="Label" parent="."]
visible = false
offset_top = 16.0
offset_right = 98.0
offset_bottom = 39.0
text = "chaser timer"

[node name="Score" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -24.0
offset_right = 24.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Score:
"
